--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+@media only screen and (max-width:600px) {
+  #display{
+    color: black;
+  }
+}
 .jumbo{
   position: absolute;
   top:30%;
@@ -19,6 +24,9 @@
 .display1{
   color: #f2f4f7;
   font-weight: 450;
+}
+.smal{
+  color: white;
 }
 .home-btn{
   background: rgba(242, 242, 242, 0.4);
