--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+.bg2{
+  background-image:url("bg3.jpg");
+  height:100vh;
+  /* parallax scroll effect */
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 @media only screen and (max-width:600px) {
   #display{
     color: black;
@@ -33,6 +41,7 @@
   font-weight: 450;
 }
 .smal{
+  font-size: 20px;
   color: white;
 }
 .home-btn{
@@ -84,4 +93,25 @@ margin: 10px 50px 0px 50px;
 }
 .style{
   font-family: 'Righteous' ,cursive;
+}
+.underline:hover{
+  transition: .2s;
+  border-bottom: 2px solid grey;
+}
+.transparent{
+  background: rgba(0, 0, 0, 0.6);
+}
+.over{
+  position: absolute;
+  top: 25%;
+  height: 40%;
+  width: 40%;
+  left: 50%;
+}
+.line{
+  width:80%;
+}
+.head1{
+  font-size: 1.5em;
+  font-family: 'Bitter', serif;
 }
